# awssign

./: .gitmodules  CMakeLists.txt
bench/: CMakeLists.txt  bench_headers.cc  bench_query.cc
include/awssign/: v4.hpp
include/awssign/detail/: buffered_stream.hpp  buffered_writer.hpp  digest.hpp  digest_stream.hpp  digest_writer.hpp  emit.hpp  fast_tolower.h  filtered_iterator.hpp  hex_encode.hpp  lower_case.hpp  output_stream.hpp  percent_decode.hpp  percent_decode_iterator.hpp  percent_decode_writer.hpp  percent_decoded_iterator.hpp  percent_decoded_stream.hpp  percent_encode.hpp  split.hpp  transform.hpp  transform_if.hpp  transform_stream.hpp  transform_writer.hpp  write.hpp
include/awssign/v4/: authorization_header.hpp  canonical_headers.hpp  canonical_query.hpp  canonical_request.hpp  canonical_uri.hpp  credential_scope.hpp  presign.hpp  s3_canonical_uri.hpp  sign.hpp  sign_header.hpp  string_to_sign.hpp  verify.hpp
include/awssign/v4/detail/: canonical_headers.hpp  canonical_query.hpp  canonical_request.hpp  canonical_uri.hpp  s3_canonical_uri.hpp  signed_header_iterator.hpp  signing_key.hpp  string_to_sign.hpp
test/: CMakeLists.txt  test_digest.cc  test_percent_decode.cc  test_v4_authorization_header.cc  test_v4_canonical_headers.cc  test_v4_canonical_query.cc  test_v4_canonical_request.cc  test_v4_canonical_uri.cc  test_v4_credential_scope.cc  test_v4_presign.cc  test_v4_s3_canonical_uri.cc  test_v4_sign.cc  test_v4_sign_header.cc  test_v4_string_to_sign.cc  test_v4_verify.cc
