add_subdirectory(dependency)

add_library(address-sanitizer INTERFACE)
target_compile_options(address-sanitizer INTERFACE "-fsanitize=address,undefined")
target_link_libraries(address-sanitizer INTERFACE "-fsanitize=address,undefined")

add_executable(test_digest test_digest.cc)
target_link_libraries(test_digest awssign address-sanitizer gtest gtest_main)
add_test(test_digest test_digest)

add_executable(test_percent_decode test_percent_decode.cc)
target_link_libraries(test_percent_decode awssign address-sanitizer gtest gtest_main)
add_test(test_percent_decode test_percent_decode)

add_executable(test_v4_canonical_headers test_v4_canonical_headers.cc)
target_link_libraries(test_v4_canonical_headers awssign address-sanitizer gtest gtest_main)
add_test(test_v4_canonical_headers test_v4_canonical_headers)

add_executable(test_v4_canonical_query test_v4_canonical_query.cc)
target_link_libraries(test_v4_canonical_query awssign address-sanitizer gtest gtest_main)
add_test(test_v4_canonical_query test_v4_canonical_query)

add_executable(test_v4_canonical_request test_v4_canonical_request.cc)
target_link_libraries(test_v4_canonical_request awssign address-sanitizer gtest gtest_main)
add_test(test_v4_canonical_request test_v4_canonical_request)

add_executable(test_v4_canonical_uri test_v4_canonical_uri.cc)
target_link_libraries(test_v4_canonical_uri awssign address-sanitizer gtest gtest_main)
add_test(test_v4_canonical_uri test_v4_canonical_uri)

add_executable(test_v4_presign test_v4_presign.cc)
target_link_libraries(test_v4_presign awssign address-sanitizer gtest gtest_main)
add_test(test_v4_presign test_v4_presign)

add_executable(test_v4_s3_canonical_uri test_v4_s3_canonical_uri.cc)
target_link_libraries(test_v4_s3_canonical_uri awssign address-sanitizer gtest gtest_main)
add_test(test_v4_s3_canonical_uri test_v4_s3_canonical_uri)

add_executable(test_v4_sign_header test_v4_sign_header.cc)
target_link_libraries(test_v4_sign_header awssign address-sanitizer gtest gtest_main)
add_test(test_v4_sign_header test_v4_sign_header)

add_executable(test_v4_string_to_sign test_v4_string_to_sign.cc)
target_link_libraries(test_v4_string_to_sign awssign address-sanitizer gtest gtest_main)
add_test(test_v4_string_to_sign test_v4_string_to_sign)

add_executable(test_v4_verify test_v4_verify.cc)
target_link_libraries(test_v4_verify awssign address-sanitizer gtest gtest_main)
add_test(test_v4_verify test_v4_verify)
